# modern-trojan

./: CMakeLists.txt  README.md
include/: conf.h  hash.h  proto.h  service.h  unix_sys.h
src/: hash.cpp  main.cpp  service.cpp
